Impliment and Test serialization of both a new Location object and the current player data object. Tested no bugs found ready to impliment. Utils various todo's and a couple of efficiency changes.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,7 @@
 name: DuelMe
-version: 0.9.9 Beta
+version: ${project.version}
 author: teozfrank
+authors: [Relicum]
 description: allows players to duel each other in a controlled environment
 main: com.teozcommunity.teozfrank.duelme.main.DuelMe
 depend: [WorldEdit, Vault]
