--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.teozcommunity.teozfrank</groupId>
     <artifactId>duelme</artifactId>
-    <version>0.7</version>
+    <version>1.0.3-SPIGOT</version>
     <packaging>jar</packaging>
     <name>duelme</name>
     <description>duelme a plugin to allow players to pvp, in a controlled area</description>
@@ -12,7 +12,8 @@
     <properties>
         <bukkit.version>1.7.10-R0.1-SNAPSHOT</bukkit.version>
         <worldedit.version>5.6.3</worldedit.version>
-        <libsdisguises.version>8.0.9-SNAPSHOT</libsdisguises.version>
+        <libsdisguises.version>8.2.6-SNAPSHOT</libsdisguises.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <repositories>
@@ -45,7 +46,7 @@
             <groupId>com.sk89q</groupId>
             <artifactId>worldedit</artifactId>
             <version>${worldedit.version}</version>
-            <scope>compile</scope>
+            <scope>provided</scope>
             <type>jar</type>
         </dependency>
         <dependency>
@@ -59,7 +60,7 @@
             <artifactId>Vault</artifactId>
             <version>1.4.1</version>
             <type>jar</type>
-            <scope>compile</scope>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
@@ -78,11 +79,19 @@
         </resources>
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
+                <version>3.1</version>
                 <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
+                    <compilerArguments>
+                        <O>-Xlint:all</O>
+                        <O>-Xlint:-path</O>
+                    </compilerArguments>
+                    <encoding>UTF-8</encoding>
+                    <showDeprecation>true</showDeprecation>
+                    <showWarnings>true</showWarnings>
+                    <source>1.7</source>
+                    <target>1.7</target>
                 </configuration>
             </plugin>
         </plugins>
